K8s/learning-modules/Module-15-NetworkPolicies/examples/00-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: student-app
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
